--- a/.editorconfig
+++ b/.editorconfig
@@ -13,8 +13,8 @@ charset = utf-8
 [*.{bat,cmd,ps1}]
 end_of_line = crlf
 
-[*.{yml,yaml}]
+[*.{js,json,json5,yml,yaml,md,rb}]
 indent_size = 2
 
-[*.tsv]
+[Makefile]
 indent_style = tab
