refactor: rename ditch to dig

--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -19,6 +19,6 @@ replace = /v{new_version}...master
 search = version = release = '{current_version}'
 replace = version = release = '{new_version}'
 
-[bumpversion:file:src/mayan_ditch/__init__.py]
+[bumpversion:file:src/mayan_dig/__init__.py]
 search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
