--- a/setup.cfg
+++ b/setup.cfg
@@ -38,9 +38,9 @@ testpaths =
 [tool:isort]
 force_single_line = True
 line_length = 120
-known_first_party = mayan_ditch
+known_first_party = mayan_dig
 default_section = THIRDPARTY
-forced_separate = test_mayan_ditch
+forced_separate = test_mayan_dig
 skip = .tox,.eggs,ci/templates,build,dist
 
 [matrix]
