--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,7 +1,6 @@
 name: build
 on:
-  # FIXME[AA]:
-  #  - push
+  - push
   - pull_request
 jobs:
   test:
@@ -17,102 +16,101 @@ jobs:
             toxpython: "python3.10"
             tox_env: "check"
             os: "ubuntu-latest"
-    # FIXME[AA]:
-    #          - name: "docs"
-    #            python: "3.10"
-    #            toxpython: "python3.10"
-    #            tox_env: "docs"
-    #            os: "ubuntu-latest"
-    #          - name: "py37-cover (ubuntu)"
-    #            python: "3.7"
-    #            toxpython: "python3.7"
-    #            python_arch: "x64"
-    #            tox_env: "py37-cover,codecov"
-    #            os: "ubuntu-latest"
-    #          - name: "py37-cover (windows)"
-    #            python: "3.7"
-    #            toxpython: "python3.7"
-    #            python_arch: "x64"
-    #            tox_env: "py37-cover,codecov"
-    #            os: "windows-latest"
-    #          - name: "py37-cover (macos)"
-    #            python: "3.7"
-    #            toxpython: "python3.7"
-    #            python_arch: "x64"
-    #            tox_env: "py37-cover,codecov"
-    #            os: "macos-latest"
-    #          - name: "py38-cover (ubuntu)"
-    #            python: "3.8"
-    #            toxpython: "python3.8"
-    #            python_arch: "x64"
-    #            tox_env: "py38-cover,codecov"
-    #            os: "ubuntu-latest"
-    #          - name: "py38-cover (windows)"
-    #            python: "3.8"
-    #            toxpython: "python3.8"
-    #            python_arch: "x64"
-    #            tox_env: "py38-cover,codecov"
-    #            os: "windows-latest"
-    #          - name: "py38-cover (macos)"
-    #            python: "3.8"
-    #            toxpython: "python3.8"
-    #            python_arch: "x64"
-    #            tox_env: "py38-cover,codecov"
-    #            os: "macos-latest"
-    #          - name: "py39-cover (ubuntu)"
-    #            python: "3.9"
-    #            toxpython: "python3.9"
-    #            python_arch: "x64"
-    #            tox_env: "py39-cover,codecov"
-    #            os: "ubuntu-latest"
-    #          - name: "py39-cover (windows)"
-    #            python: "3.9"
-    #            toxpython: "python3.9"
-    #            python_arch: "x64"
-    #            tox_env: "py39-cover,codecov"
-    #            os: "windows-latest"
-    #          - name: "py39-cover (macos)"
-    #            python: "3.9"
-    #            toxpython: "python3.9"
-    #            python_arch: "x64"
-    #            tox_env: "py39-cover,codecov"
-    #            os: "macos-latest"
-    #          - name: "py310-cover (ubuntu)"
-    #            python: "3.10"
-    #            toxpython: "python3.10"
-    #            python_arch: "x64"
-    #            tox_env: "py310-cover,codecov"
-    #            os: "ubuntu-latest"
-    #          - name: "py310-cover (windows)"
-    #            python: "3.10"
-    #            toxpython: "python3.10"
-    #            python_arch: "x64"
-    #            tox_env: "py310-cover,codecov"
-    #            os: "windows-latest"
-    #          - name: "py310-cover (macos)"
-    #            python: "3.10"
-    #            toxpython: "python3.10"
-    #            python_arch: "x64"
-    #            tox_env: "py310-cover,codecov"
-    #            os: "macos-latest"
-    #          - name: "py311-cover (ubuntu)"
-    #            python: "3.11"
-    #            toxpython: "python3.11"
-    #            python_arch: "x64"
-    #            tox_env: "py311-cover,codecov"
-    #            os: "ubuntu-latest"
-    #          - name: "py311-cover (windows)"
-    #            python: "3.11"
-    #            toxpython: "python3.11"
-    #            python_arch: "x64"
-    #            tox_env: "py311-cover,codecov"
-    #            os: "windows-latest"
-    #          - name: "py311-cover (macos)"
-    #            python: "3.11"
-    #            toxpython: "python3.11"
-    #            python_arch: "x64"
-    #            tox_env: "py311-cover,codecov"
-    #            os: "macos-latest"
+          - name: "docs"
+            python: "3.10"
+            toxpython: "python3.10"
+            tox_env: "docs"
+            os: "ubuntu-latest"
+          - name: "py37-cover (ubuntu)"
+            python: "3.7"
+            toxpython: "python3.7"
+            python_arch: "x64"
+            tox_env: "py37-cover,codecov"
+            os: "ubuntu-latest"
+          - name: "py37-cover (windows)"
+            python: "3.7"
+            toxpython: "python3.7"
+            python_arch: "x64"
+            tox_env: "py37-cover,codecov"
+            os: "windows-latest"
+          - name: "py37-cover (macos)"
+            python: "3.7"
+            toxpython: "python3.7"
+            python_arch: "x64"
+            tox_env: "py37-cover,codecov"
+            os: "macos-latest"
+          - name: "py38-cover (ubuntu)"
+            python: "3.8"
+            toxpython: "python3.8"
+            python_arch: "x64"
+            tox_env: "py38-cover,codecov"
+            os: "ubuntu-latest"
+          - name: "py38-cover (windows)"
+            python: "3.8"
+            toxpython: "python3.8"
+            python_arch: "x64"
+            tox_env: "py38-cover,codecov"
+            os: "windows-latest"
+          - name: "py38-cover (macos)"
+            python: "3.8"
+            toxpython: "python3.8"
+            python_arch: "x64"
+            tox_env: "py38-cover,codecov"
+            os: "macos-latest"
+          - name: "py39-cover (ubuntu)"
+            python: "3.9"
+            toxpython: "python3.9"
+            python_arch: "x64"
+            tox_env: "py39-cover,codecov"
+            os: "ubuntu-latest"
+          - name: "py39-cover (windows)"
+            python: "3.9"
+            toxpython: "python3.9"
+            python_arch: "x64"
+            tox_env: "py39-cover,codecov"
+            os: "windows-latest"
+          - name: "py39-cover (macos)"
+            python: "3.9"
+            toxpython: "python3.9"
+            python_arch: "x64"
+            tox_env: "py39-cover,codecov"
+            os: "macos-latest"
+          - name: "py310-cover (ubuntu)"
+            python: "3.10"
+            toxpython: "python3.10"
+            python_arch: "x64"
+            tox_env: "py310-cover,codecov"
+            os: "ubuntu-latest"
+          - name: "py310-cover (windows)"
+            python: "3.10"
+            toxpython: "python3.10"
+            python_arch: "x64"
+            tox_env: "py310-cover,codecov"
+            os: "windows-latest"
+          - name: "py310-cover (macos)"
+            python: "3.10"
+            toxpython: "python3.10"
+            python_arch: "x64"
+            tox_env: "py310-cover,codecov"
+            os: "macos-latest"
+          - name: "py311-cover (ubuntu)"
+            python: "3.11"
+            toxpython: "python3.11"
+            python_arch: "x64"
+            tox_env: "py311-cover,codecov"
+            os: "ubuntu-latest"
+          - name: "py311-cover (windows)"
+            python: "3.11"
+            toxpython: "python3.11"
+            python_arch: "x64"
+            tox_env: "py311-cover,codecov"
+            os: "windows-latest"
+          - name: "py311-cover (macos)"
+            python: "3.11"
+            toxpython: "python3.11"
+            python_arch: "x64"
+            tox_env: "py311-cover,codecov"
+            os: "macos-latest"
     steps:
       - uses: actions/checkout@v2
         with:
