test: ignore basepython conflict

--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,21 @@
 [tox]
+# https://tox.readthedocs.io/en/latest/config.html
+isolated_build = True
 envlist =
     clean,
     check,
     docs,
-    py36-cover,
-    py36-nocov,
     py37-cover,
-    py37-nocov,
     py38-cover,
-    py38-nocov,
     py39-cover,
-    py39-nocov,
-    pypy3-cover,
-    pypy3-nocov,
+    py310-cover,
+    py311-cover,
     report
+ignore_basepython_conflict = true
+;requires =
+;    # Installing with "requires" even though it's not the recommended option
+;    # https://github.com/enpaul/tox-poetry-installer/#installing
+;    tox-poetry-installer[poetry] >= 0.9.0
 
 [testenv]
 basepython =
