test: fix InterpreterNotFound

--- a/tox.ini
+++ b/tox.ini
@@ -20,6 +20,8 @@ ignore_basepython_conflict = true
 [testenv]
 basepython =
     {bootstrap,clean,check,report,docs,codecov}: {env:TOXPYTHON:python3}
+    # To avoid InterpreterNotFound. See https://github.com/tox-dev/tox/issues/1548
+    .package: python3
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
