test: missing vars in tox.ini

--- a/tox.ini
+++ b/tox.ini
@@ -25,6 +25,9 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
+    MAYAN_URL=http://dummy.mayan.url
+    MAYAN_ADMIN_USER=user
+    MAYAN_ADMIN_PASSWORD=password
 passenv =
     *
 deps =
@@ -136,17 +139,3 @@ deps =
 
 [testenv:py39-nocov]
 basepython = {env:TOXPYTHON:python3.9}
-
-[testenv:pypy3-cover]
-basepython = {env:TOXPYTHON:pypy3}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:pypy3-nocov]
-basepython = {env:TOXPYTHON:pypy3}
