--- a/ci/templates/tox.ini
+++ b/ci/templates/tox.ini
@@ -48,7 +48,8 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+;TODO: not working yet
+;    sphinx-build -b linkcheck docs dist/docs
 
 
 [testenv:codecov]
