--- a/tox.ini
+++ b/tox.ini
@@ -5,8 +5,6 @@ envlist =
     clean,
     check,
     docs,
-    py37-cover,
-    py38-cover,
     py39-cover,
     py310-cover,
     py311-cover,
@@ -62,7 +60,8 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+;TODO: not working yet
+;    sphinx-build -b linkcheck docs dist/docs
 
 
 [testenv:codecov]
@@ -97,34 +96,6 @@ deps =
 
 [testenv:py36-nocov]
 basepython = {env:TOXPYTHON:python3.6}
-
-[testenv:py37-cover]
-basepython = {env:TOXPYTHON:python3.7}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:py37-nocov]
-basepython = {env:TOXPYTHON:python3.7}
-
-[testenv:py38-cover]
-basepython = {env:TOXPYTHON:python3.8}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:py38-nocov]
-basepython = {env:TOXPYTHON:python3.8}
 
 [testenv:py39-cover]
 basepython = {env:TOXPYTHON:python3.9}
