--- a/tox.ini
+++ b/tox.ini
@@ -1,26 +1,31 @@
 [tox]
+# https://tox.readthedocs.io/en/latest/config.html
+isolated_build = True
 envlist =
     clean,
     check,
     docs,
-    py36-cover,
-    py36-nocov,
-    py37-cover,
-    py37-nocov,
-    py38-cover,
-    py38-nocov,
     py39-cover,
-    py39-nocov,
-    pypy3-cover,
-    pypy3-nocov,
+    py310-cover,
+    py311-cover,
     report
+ignore_basepython_conflict = true
+;requires =
+;    # Installing with "requires" even though it's not the recommended option
+;    # https://github.com/enpaul/tox-poetry-installer/#installing
+;    tox-poetry-installer[poetry] >= 0.9.0
 
 [testenv]
 basepython =
     {bootstrap,clean,check,report,docs,codecov}: {env:TOXPYTHON:python3}
+    # To avoid InterpreterNotFound. See https://github.com/tox-dev/tox/issues/1548
+    .package: python3
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
+    MAYAN_URL=http://dummy.mayan.url
+    MAYAN_ADMIN_USER=user
+    MAYAN_ADMIN_PASSWORD=password
 passenv =
     *
 deps =
@@ -39,15 +44,12 @@ commands =
 [testenv:check]
 deps =
     docutils
-    check-manifest
     flake8
     readme-renderer
     pygments
     isort
 skip_install = true
 commands =
-    python setup.py check --strict --metadata --restructuredtext
-    check-manifest {toxinidir}
     flake8
     isort --verbose --check-only --diff --filter-files .
 
@@ -58,7 +60,8 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
-    sphinx-build -b linkcheck docs dist/docs
+;TODO: not working yet
+;    sphinx-build -b linkcheck docs dist/docs
 
 
 [testenv:codecov]
@@ -94,34 +97,6 @@ deps =
 [testenv:py36-nocov]
 basepython = {env:TOXPYTHON:python3.6}
 
-[testenv:py37-cover]
-basepython = {env:TOXPYTHON:python3.7}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:py37-nocov]
-basepython = {env:TOXPYTHON:python3.7}
-
-[testenv:py38-cover]
-basepython = {env:TOXPYTHON:python3.8}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:py38-nocov]
-basepython = {env:TOXPYTHON:python3.8}
-
 [testenv:py39-cover]
 basepython = {env:TOXPYTHON:python3.9}
 setenv =
@@ -135,17 +110,3 @@ deps =
 
 [testenv:py39-nocov]
 basepython = {env:TOXPYTHON:python3.9}
-
-[testenv:pypy3-cover]
-basepython = {env:TOXPYTHON:pypy3}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:pypy3-nocov]
-basepython = {env:TOXPYTHON:pypy3}
