test: change standard env vars

--- a/tox.ini
+++ b/tox.ini
@@ -26,6 +26,12 @@ setenv =
     MAYAN_URL=http://dummy.mayan.url
     MAYAN_ADMIN_USER=user
     MAYAN_ADMIN_PASSWORD=password
+
+    # https://github.com/tiangolo/typer/issues/413#issuecomment-1271063956
+    # https://rich.readthedocs.io/en/latest/console.html#environment-variables
+    # https://github.com/tiangolo/typer/blob/master/scripts/test.sh#L6-L7
+    TERM=dumb
+    TERMINAL_WIDTH=3000
 passenv =
     *
 deps =
