--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -1,6 +1,6 @@
 name: build
 on:
-  - push
+  #  - push
   - pull_request
 jobs:
   test:
@@ -11,70 +11,70 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - name: "check"
-            python: "3.10"
-            toxpython: "python3.10"
-            tox_env: "check"
-            os: "ubuntu-latest"
-          - name: "docs"
-            python: "3.10"
-            toxpython: "python3.10"
-            tox_env: "docs"
-            os: "ubuntu-latest"
+          #          - name: "check"
+          #            python: "3.10"
+          #            toxpython: "python3.10"
+          #            tox_env: "check"
+          #            os: "ubuntu-latest"
+          #          - name: "docs"
+          #            python: "3.10"
+          #            toxpython: "python3.10"
+          #            tox_env: "docs"
+          #            os: "ubuntu-latest"
           - name: "py39-cover (ubuntu)"
             python: "3.9"
             toxpython: "python3.9"
             python_arch: "x64"
             tox_env: "py39-cover,codecov"
             os: "ubuntu-latest"
-          - name: "py39-cover (windows)"
-            python: "3.9"
-            toxpython: "python3.9"
-            python_arch: "x64"
-            tox_env: "py39-cover,codecov"
-            os: "windows-latest"
-          - name: "py39-cover (macos)"
-            python: "3.9"
-            toxpython: "python3.9"
-            python_arch: "x64"
-            tox_env: "py39-cover,codecov"
-            os: "macos-latest"
-          - name: "py310-cover (ubuntu)"
-            python: "3.10"
-            toxpython: "python3.10"
-            python_arch: "x64"
-            tox_env: "py310-cover,codecov"
-            os: "ubuntu-latest"
-          - name: "py310-cover (windows)"
-            python: "3.10"
-            toxpython: "python3.10"
-            python_arch: "x64"
-            tox_env: "py310-cover,codecov"
-            os: "windows-latest"
-          - name: "py310-cover (macos)"
-            python: "3.10"
-            toxpython: "python3.10"
-            python_arch: "x64"
-            tox_env: "py310-cover,codecov"
-            os: "macos-latest"
-          - name: "py311-cover (ubuntu)"
-            python: "3.11"
-            toxpython: "python3.11"
-            python_arch: "x64"
-            tox_env: "py311-cover,codecov"
-            os: "ubuntu-latest"
-          - name: "py311-cover (windows)"
-            python: "3.11"
-            toxpython: "python3.11"
-            python_arch: "x64"
-            tox_env: "py311-cover,codecov"
-            os: "windows-latest"
-          - name: "py311-cover (macos)"
-            python: "3.11"
-            toxpython: "python3.11"
-            python_arch: "x64"
-            tox_env: "py311-cover,codecov"
-            os: "macos-latest"
+    #          - name: "py39-cover (windows)"
+    #            python: "3.9"
+    #            toxpython: "python3.9"
+    #            python_arch: "x64"
+    #            tox_env: "py39-cover,codecov"
+    #            os: "windows-latest"
+    #          - name: "py39-cover (macos)"
+    #            python: "3.9"
+    #            toxpython: "python3.9"
+    #            python_arch: "x64"
+    #            tox_env: "py39-cover,codecov"
+    #            os: "macos-latest"
+    #          - name: "py310-cover (ubuntu)"
+    #            python: "3.10"
+    #            toxpython: "python3.10"
+    #            python_arch: "x64"
+    #            tox_env: "py310-cover,codecov"
+    #            os: "ubuntu-latest"
+    #          - name: "py310-cover (windows)"
+    #            python: "3.10"
+    #            toxpython: "python3.10"
+    #            python_arch: "x64"
+    #            tox_env: "py310-cover,codecov"
+    #            os: "windows-latest"
+    #          - name: "py310-cover (macos)"
+    #            python: "3.10"
+    #            toxpython: "python3.10"
+    #            python_arch: "x64"
+    #            tox_env: "py310-cover,codecov"
+    #            os: "macos-latest"
+    #          - name: "py311-cover (ubuntu)"
+    #            python: "3.11"
+    #            toxpython: "python3.11"
+    #            python_arch: "x64"
+    #            tox_env: "py311-cover,codecov"
+    #            os: "ubuntu-latest"
+    #          - name: "py311-cover (windows)"
+    #            python: "3.11"
+    #            toxpython: "python3.11"
+    #            python_arch: "x64"
+    #            tox_env: "py311-cover,codecov"
+    #            os: "windows-latest"
+    #          - name: "py311-cover (macos)"
+    #            python: "3.11"
+    #            toxpython: "python3.11"
+    #            python_arch: "x64"
+    #            tox_env: "py311-cover,codecov"
+    #            os: "macos-latest"
     steps:
       - uses: actions/checkout@v2
         with:
