feat: display document properties in magenta

--- a/tox.ini
+++ b/tox.ini
@@ -23,9 +23,9 @@ basepython =
 setenv =
     PYTHONPATH={toxinidir}/tests
     PYTHONUNBUFFERED=yes
-    MAYAN_URL=http://dummy.mayan.url
-    MAYAN_ADMIN_USER=user
-    MAYAN_ADMIN_PASSWORD=password
+    MAYAN_DIG_URL=http://dummy.mayan.url
+    MAYAN_DIG_USER=user
+    MAYAN_DIG_PASSWORD=password
 
     # https://github.com/tiangolo/typer/issues/413#issuecomment-1271063956
     # https://rich.readthedocs.io/en/latest/console.html#environment-variables
