--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
 env =
-    MAYAN_URL=http://dummy.mayan.url
-    MAYAN_ADMIN_USER=user
-    MAYAN_ADMIN_PASSWORD=password
+    MAYAN_DIG_URL=http://dummy.mayan.url
+    MAYAN_DIG_USER=user
+    MAYAN_DIG_PASSWORD=password
