--- a/tox.ini
+++ b/tox.ini
@@ -66,7 +66,7 @@ deps =
     -r{toxinidir}/docs/requirements.txt
 commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
-;TODO: not working yet
+;TODO: ci: restore "sphinx-build" once the project has a documentation website
 ;    sphinx-build -b linkcheck docs dist/docs
 
 
